# mcpt

./: backtester.py  macd.py  pyproject.toml  readme.md
