[tool.poetry]
name = "mcpt"
version = "0.1.0"
description = ""
authors = ["flxclxc"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.4"
pandas-datareader = "^0.10.0"
matplotlib = "^3.10.1"
tqdm = "^4.67.1"
hyperopt = "^0.2.7"
yfinance = "^0.2.56"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
